--- a/notif-panel/src/main/angular/panel/src/app/app.component.html
+++ b/notif-panel/src/main/angular/panel/src/app/app.component.html
@@ -3,10 +3,16 @@
     <div class="font-size-x-large">
       Spring Boot 2.0.0.RC1 + Angular 5.2.0 + mongoDB 3.6 Change Streams
     </div>
-    <div class="font-size-x-large">
+    <div class="font-size-x-medium">
       Exemplary application using Reactive WebClient to create async api and Server Send Event to capture notifications received from mongoDB via Change Streams to allow to access real-time data change
     </div>
   </div>
-  <notif-table></notif-table>
+  <div>
+    <div class="notif-panel">
+      <!--<notif-chart></notif-chart>-->
+    </div>
+    <div class="notif-panel">
+      <notif-table></notif-table>
+    </div>
+  </div>
 </div>
-
